k3s_cluster/base/default/template-simple/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: <app-ns>
  labels:
    app: <app-ns>-<app-name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <app-ns>-<app-name>
  template:
    metadata:
      labels:
        app: <app-ns>-<app-name>
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: <app-name>
          image: <app-URL>:latest
          ports:
          - containerPort: 80
          - containerPort: 443
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
